# offline-llm-eval

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
datasets/initial/: answer_boundaries.yaml  citation_fidelity.yaml  mock_error_envelopes.yaml  rag_basics.yaml  structured_outputs.yaml
docs/: overview.md  spec.md
docs/decisions/: 0001-llm-output-trust-criteria.md  README.md
docs/evidence/: verification-2026-06-04.md
src/offline_llm_eval/: main.py
tests/: test_main.py  test_package_metadata.py
tests/api/: test_cases.py  test_database.py  test_diff.py  test_error_response.py  test_evidence.py  test_health.py  test_review.py  test_runs.py
tests/cli/: test_gate.py  test_gate_config.py  test_gate_config_schema.py  test_gate_rules.py  test_gate_snapshot.py
tests/dataset/: test_assertion_model.py  test_full_replacement.py  test_import.py  test_repository.py  test_validation.py  test_version.py
tests/db/: test_engine.py  test_migrations.py
tests/diff/: test_baseline_selector.py  test_classification.py  test_comparator.py  test_error_codes.py  test_warning.py
tests/evaluator/: test_assertions.py  test_results_schema.py  test_secret_pattern.py  test_status.py
tests/evidence/: test_markdown.py  test_sanitize.py
tests/logging/: test_structured.py
tests/provider/: test_mock.py  test_mock_behavior.py  test_mock_response_schema.py
tests/review/: test_queue.py
tests/run/: test_concurrency_guard.py  test_heartbeat.py  test_metrics.py  test_repository.py  test_stale_sweep.py  test_usage.py
tests/runner/: test_error_route.py  test_error_type.py  test_latency.py
tests/security/: test_secret_provider.py
tests/storage/: test_backend.py
tests/util/: test_loaders.py
(+65 files in other folders)
